clipboard: factor out the freeing of priv->contents into a function

https://bugzilla.gnome.org/show_bug.cgi?id=790344